Configurazione WebApp per cercare di prendere lo user corrente

--- a/AUPSUP_HTML5_METASUPPLIER/webapp/view/View1.view.xml
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/view/View1.view.xml
@@ -3,12 +3,12 @@
 	<Shell id="shell">
 		<App id="app">
 			<pages>
-				<Page id="page" title="{i18n>title}">
+				<Page id="page">
 					<content>
 					<Table items="{OutJSONModel>/results}">
 					
 											<columns>
-												<Column id="EBELN" minScreenWidth="Desktop" demandPopin="true" width="6rem">
+												<Column minScreenWidth="Desktop" demandPopin="true">
 													<Label text="CLIENT ID" class="columnLabelStyle" wrapping="true"/>
 												</Column>
 												
