HTML5 correttiva servizio su tutte le apps

--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/view/Worklist.view.xml
@@ -24,7 +24,7 @@
 											<fb:control>
 												<m:MultiComboBox selectedKeys="{filterNCJSONModel>/metaids}" selectionChange="onChangeMetasupplier"
 													items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }">
-													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESC}"/>
+													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
