INBOUND DELIVERY implementazione

--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/view/Worklist.view.xml
@@ -29,7 +29,7 @@
 											<fb:control>
 												<m:MultiComboBox selectedKeys="{MetasupplierJSONModel>/METAID}" selectionChange="onChangeMetasupplier"
 													items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }">
-													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESC}"/>
+													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
