--- a/AUPSUP_HTML5_METASUPPLIER_M/webapp/view/App.view.xml
+++ b/AUPSUP_HTML5_METASUPPLIER_M/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="it.alteaup.supplier.portal.metasupplier.AUPSUP_HTML5_METASUPPLIER_M.controller.App" xmlns:mvc="sap.ui.core.mvc"
-	displayBlock="true" xmlns="sap.m">
-	<App id="idAppControl"/> 
-</mvc:View> 
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"  displayBlock="true"
+	controllerName="it.alteaup.supplier.portal.metasupplier.AUPSUP_HTML5_METASUPPLIER_M.controller.App" xmlns:html="http://www.w3.org/1999/xhtml">
+	<App id="idAppControl"/>
+</mvc:View>
