Modifiche segnalazioni Matteo/Domenico - Approvazione

--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/view/Worklist.view.xml
@@ -140,7 +140,7 @@
 												<m:Column id="EBELP" minScreenWidth="Desktop" demandPopin="true">
 													<m:Label text="{i18n>EBELP}" class="columnLabelStyle" wrapping="true"/>
 												</m:Column>
-												<m:Column id="EBTYP" minScreenWidth="Desktop" demandPopin="true">
+												<m:Column id="EBTYP" visible="false" minScreenWidth="Desktop" demandPopin="true">
 													<m:Label text="{i18n>EBTYP}" class="columnLabelStyle" wrapping="true"/>
 												</m:Column>
 												<m:Column id="MATNR" minScreenWidth="Desktop" demandPopin="true">
