--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/view/Worklist.view.xml
@@ -194,7 +194,7 @@
 														<m:Text text="{SchedAgreeJSONModel>MENGE_ORIGINAL}"/>
 														<m:Text text="{SchedAgreeJSONModel>MENGE}"/>
 														<m:Text text="{SchedAgreeJSONModel>NETPR_ORIGINAL}"/>
-														<m:Text text="{SchedAgreeJSONModel>NETPR}"/>
+														<m:Text text="{SchedAgreeJSONModel>NETPR}" visible="{= ${SchedAgreeJSONModel>NETPR_ORIGINAL} !== ${SchedAgreeJSONModel>NETPR}}"/>
 														<m:Text text="{SchedAgreeJSONModel>PEINH_ORIGINAL}"/>
 														<m:Text text="{SchedAgreeJSONModel>PEINH}"/>
 														<m:Text text="{SchedAgreeJSONModel>SCHEDMOD}"/>
