SCHED AGREE: limiti tolleranze quantità

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/view/Worklist.view.xml
@@ -1,6 +1,13 @@
-<mvc:View controllerName="it.alteaup.supplier.portal.schedulingagreement.AUPSUP_HTML5_SCHEDAGREE.controller.Worklist"
-	xmlns:mvc="sap.ui.core.mvc" xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:m="sap.m" xmlns:table="sap.ui.table"
-	xmlns:core="sap.ui.core" xmlns:personal="sap.uxap.sample.SharedBlocks.personal" xmlns:form="sap.ui.layout.form"  xmlns:fb="sap.ui.comp.filterbar">
+<mvc:View controllerName="it.alteaup.supplier.portal.schedulingagreement.AUPSUP_HTML5_SCHEDAGREE.controller.Worklist" 
+	xmlns:mvc="sap.ui.core.mvc" 
+	xmlns="sap.uxap" 
+	xmlns:layout="sap.ui.layout" 
+	xmlns:m="sap.m" 
+	xmlns:table="sap.ui.table" 
+	xmlns:core="sap.ui.core" 
+	xmlns:personal="sap.uxap.sample.SharedBlocks.personal" 
+	xmlns:form="sap.ui.layout.form" 
+	xmlns:fb="sap.ui.comp.filterbar">
 	<m:Shell id="shell" appWidthLimited="false">
 		<m:App id="app">
 			<m:pages>
@@ -27,8 +34,7 @@
 										</fb:FilterItem>
 										<fb:FilterItem name="Metasupplier" label="{i18n>METASUP}" visible="{VisibilityJSONModel>/isBuyer}">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{MetasupplierJSONModel>/METAID}" selectionChange="onChangeMetasupplier"
-													items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }" >
+												<m:MultiComboBox selectedKeys="{MetasupplierJSONModel>/METAID}" selectionChange="onChangeMetasupplier" items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }">
 													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
@@ -45,38 +51,33 @@
 										</fb:FilterItem>
 										<fb:FilterItem name="Lifnr" label="{i18n>supplier}" visible="{VisibilityJSONModel>/isBuyer}">
 											<fb:control>
-												<m:MultiComboBox selectionChange="onChangeMetalifnr" showSecondaryValues="true"
-													items="{ path: 'lifnrJSONModel>/', sorter: { path: 'LIFNR' } }" >
+												<m:MultiComboBox selectionChange="onChangeMetalifnr" showSecondaryValues="true" items="{ path: 'lifnrJSONModel>/', sorter: { path: 'LIFNR' } }">
 													<core:ListItem key="{lifnrJSONModel>LIFNR}" text="{lifnrJSONModel>DESCR}" additionalText="{lifnrJSONModel>LIFNR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="Matnr" label="{i18n>MATNR}" visible="{VisibilityJSONModel>/isBuyer}">
 											<fb:control>
-												<m:Input type="Text" value="{filterOrdersJSONModel>/MatnrDesc}" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleMatnr"
-													class="sapUiSmallMarginBottom" submit="onSearchOrders"/>
+												<m:Input type="Text" value="{filterOrdersJSONModel>/MatnrDesc}" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleMatnr" class="sapUiSmallMarginBottom" submit="onSearchOrders"/>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="Ekorg" label="{i18n>purchaseOrganization}" visible="{VisibilityJSONModel>/isBuyer}">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekorg}"
-													items="{ path: 'PurchaseOrganizationJSONModel>/results', sorter: { path: 'PURCH_ORG' } }">
+												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekorg}" items="{ path: 'PurchaseOrganizationJSONModel>/results', sorter: { path: 'PURCH_ORG' } }">
 													<core:Item key="{PurchaseOrganizationJSONModel>PURCH_ORG}" text="{PurchaseOrganizationJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="GrAcq" label="{i18n>EKGRP}" visible="{VisibilityJSONModel>/isBuyer}">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekgrp}" items="{ path: 'PurchaseGroupJSONModel>/results', sorter: { path: 'CODE' } }"
-													showSecondaryValues="true">
+												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekgrp}" items="{ path: 'PurchaseGroupJSONModel>/results', sorter: { path: 'CODE' } }" showSecondaryValues="true">
 													<core:ListItem key="{PurchaseGroupJSONModel>CODE}" text="{PurchaseGroupJSONModel>DESCR}" additionalText="{PurchaseGroupJSONModel>CODE}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="Plant" label="{i18n>WERKS}">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/werks}" visible="true"
-													items="{ path: 'PlantsJSONModel>/results', sorter: { path: 'EWERK' } }" showSecondaryValues="true">
+												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/werks}" visible="true" items="{ path: 'PlantsJSONModel>/results', sorter: { path: 'EWERK' } }" showSecondaryValues="true">
 													<core:ListItem key="{PlantsJSONModel>EWERK}" text="{PlantsJSONModel>DESCR}" additionalText="{PlantsJSONModel>EWERK}"/>
 												</m:MultiComboBox>
 											</fb:control>
@@ -116,17 +117,14 @@
 								<ObjectPageSection showTitle="false">
 									<subSections>
 										<ObjectPageSubSection >
-											<m:Table id="OrderHeadersTable"
-												items="{ path: 'OrderJSONModel>/results', sorter: { path: 'PRIMO_PERIODO', ascending: true }}"
-												itemPress="onRowSelectionChange" growing="true" growingThreshold="500" growingScrollToLoad="false">
+											<m:Table id="OrderHeadersTable" items="{ path: 'OrderJSONModel>/results', sorter: { path: 'PRIMO_PERIODO', ascending: true }}" itemPress="onRowSelectionChange" growing="true" growingThreshold="500" growingScrollToLoad="false">
 												<m:headerToolbar>
 													<m:OverflowToolbar>
 														<m:content>
 															<m:Title text="{i18n>title}" level="H2"/>
 															<m:Title text="{= ${OrderJSONModel>/results}.length}" level="H2"/>
 															<m:ToolbarSpacer/>
-															<m:Button visible="false" id="headerFilterButton" tooltip="{i18n>clearFilter}" icon="sap-icon://clear-filter" press="onClearFilter"
-																type="Transparent"/>
+															<m:Button visible="false" id="headerFilterButton" tooltip="{i18n>clearFilter}" icon="sap-icon://clear-filter" press="onClearFilter" type="Transparent"/>
 															<m:Button icon="sap-icon://excel-attachment" press="onExport" tooltip="{i18n>Export_Excel}"/>
 															<m:Button icon="sap-icon://vertical-grip" visible="true" press="onColumnSelection" tooltip="{i18n>personalization}"/>
 														</m:content>
@@ -172,6 +170,9 @@
 													<m:Column id="SECONDO_PERIODO" visible="{columnVisibilityModel>/SECONDO_PERIODO}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>SECONDO_PERIODO}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
+													<m:Column id="TESTS" minScreenWidth="Desktop" demandPopin="true">
+
+													</m:Column>
 												</m:columns>
 												<m:items>
 													<m:ColumnListItem type="Navigation" highlight="{path:'OrderJSONModel>Status', formatter:'.formatRowHighlight'}">
@@ -189,6 +190,7 @@
 															<m:Text text="{OrderJSONModel>WAERS}"/>
 															<m:Text text="{OrderJSONModel>PRIMO_PERIODO}"/>
 															<m:Text text="{OrderJSONModel>SECONDO_PERIODO}"/>
+															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
 														</m:cells>
 													</m:ColumnListItem>
 												</m:items>
