--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -51,7 +51,7 @@
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="Matnr" label="{i18n>MATNR}" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterItem name="Matnr" label="{i18n>MATNR}">
 											<fb:control>
 												<m:Input type="Text" value="{filterOrdersJSONModel>/MatnrDesc}" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleMatnr"
 													class="sapUiSmallMarginBottom" submit="onSearchOrders"/>
@@ -148,6 +148,9 @@
 													<m:Column id="NAME1" visible="{columnVisibilityModel>/NAME1}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>supplierName}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
+													<m:Column id="PLANT_DESCR" visible="{columnVisibilityModel>/PLANT_DESCR}" minScreenWidth="Desktop" demandPopin="true">
+														<m:Label text="{i18n>PLANT_DESCR}" class="columnLabelStyle" wrapping="true"/>
+													</m:Column>													
 													<m:Column id="MATNR" visible="{columnVisibilityModel>/MATNR}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>MATNR}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
@@ -181,6 +184,7 @@
 															<m:Text text="{OrderJSONModel>EBELP}"/>
 															<m:Text text="{OrderJSONModel>LIFNR}"/>
 															<m:Text text="{OrderJSONModel>NAME1}"/>
+															<m:Text text="{OrderJSONModel>WERKS} / {OrderJSONModel>PLANT_DESCR}"/>															
 															<m:Text text="{OrderJSONModel>MATNR}"/>
 															<m:Text text="{OrderJSONModel>TXZ01}"/>
 															<m:Text text="{OrderJSONModel>IDNLF}"/>
