--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -134,7 +134,7 @@
 												</m:headerToolbar>
 												<m:columns>
 													<m:Column>
-														<m:CheckBox select="onSelectAll"/>
+														<m:CheckBox select="onSelectAll" visible="{= ${VisibilityJSONModel>/isSupplierD} === false}"/>
 													</m:Column>
 													<m:Column id="EBELN" visible="{columnVisibilityModel>/EBELN}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>orderNumber}" class="columnLabelStyle" wrapping="true"/>
@@ -175,6 +175,9 @@
 													<m:Column id="SECONDO_PERIODO" visible="{columnVisibilityModel>/SECONDO_PERIODO}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>SECONDO_PERIODO}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
+													<m:Column id="TESTS" minScreenWidth="Desktop" demandPopin="true">
+
+													</m:Column>
 												</m:columns>
 												<m:items>
 													<m:ColumnListItem type="Navigation" highlight="{path:'OrderJSONModel>Status', formatter:'.formatRowHighlight'}">
@@ -193,6 +196,7 @@
 															<m:Text text="{OrderJSONModel>WAERS}"/>
 															<m:Text text="{OrderJSONModel>PRIMO_PERIODO}"/>
 															<m:Text text="{OrderJSONModel>SECONDO_PERIODO}"/>
+															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
 														</m:cells>
 													</m:ColumnListItem>
 												</m:items>
@@ -211,7 +215,7 @@
 							<footer>
 								<m:Toolbar >
 									<m:ToolbarSpacer/>
-									<m:Button type="Accept" text="{i18n>Confirm}" press="onConfirmPositions"/>
+									<m:Button type="Accept" text="{i18n>Confirm}" press="onConfirmPositions" visible="{= ${VisibilityJSONModel>/isSupplierD} === false}"/>
 								</m:Toolbar>
 							</footer>
 						</ObjectPageLayout>
